<resources>
    <string name="app_name">Alimentador-TCC-Daisy-APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="alimentac_o">ALIMENTACÃO</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastro">CADASTRO</string>
    <string name="nome">Nome</string>
</resources>
